--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --port 4444",
+    "start": "webpack-dev-server --host 0.0.0.0 --port 4444",
     "build": "webpack -p",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
   },
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.116",
     "@types/query-string": "^6.1.0",
     "@types/react": "^16.4.14",
+    "@types/react-autocomplete": "^1.8.4",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.9",
     "@types/react-router": "^4.0.31",
