--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react-redux": "^6.0.9",
     "@types/react-router": "^4.0.31",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.16",
     "@types/redux-logger": "^3.0.6",
     "css-loader": "^1.0.0",
     "node-sass": "^4.9.3",
@@ -33,6 +32,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "connected-react-router": "^4.5.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "query-string": "^6.1.0",
@@ -41,7 +41,6 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
